# ImageWAM

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
configs/: sim_libero.yaml  sim_libero_omnigen2.yaml  sim_robotwin.yaml  train.yaml
configs/data/: interndata_a1_dirs.yaml  interndata_a1_ee.yaml  interndata_a1_ee_omnigen2.yaml  interndata_a1_ee_v3.yaml  interndata_a1_ee_v3_omnigen2.yaml  interndata_a1_ee_v3_sample.yaml  interndata_a1_v3_dirs.yaml  libero_2cam.yaml  libero_dim_pair.yaml  libero_omnigen2_pair.yaml  robotwin.yaml  robotwin_clean.yaml  robotwin_omnigen2.yaml  robotwin_omnigen2_clean.yaml  robotwin_omnigen2_v3.yaml  robotwin_v3.yaml
configs/model/: imagewam.yaml  imagewam_dim.yaml  imagewam_flux2_klein_4b_base.yaml  imagewam_flux2_klein_9b_base.yaml  imagewam_idm.yaml  imagewam_joint.yaml  imagewam_noise_idm.yaml  imagewam_noise_idm_omnigen2.yaml  imagewam_omnigen2.yaml  imagewam_ovis_u1.yaml
configs/task/: interndata_a1_ee_omnigen2_imagewam.yaml  interndata_a1_ee_v3_flux2_klein_4b_base_imagewam.yaml  interndata_a1_ee_v3_omnigen2_imagewam.yaml  libero_dim_imagewam.yaml  libero_flux2_klein_4b_base_imagewam.yaml  libero_flux2_klein_9b_base_imagewam.yaml  libero_idm_2cam224_1e-4.yaml  libero_joint_2cam224_1e-4.yaml  libero_noise_idm_2cam224_1e-4.yaml  libero_omnigen2_imagewam.yaml  libero_ovis_u1_imagewam.yaml  libero_uncond_2cam224_1e-4.yaml  robotwin_flux2_klein_4b_base_clean_imagewam.yaml  robotwin_flux2_klein_4b_base_imagewam.yaml  robotwin_flux2_klein_9b_base_clean_imagewam.yaml  robotwin_flux2_klein_9b_base_imagewam.yaml  robotwin_idm_3cam_384_1e-4.yaml  robotwin_joint_3cam_384_1e-4.yaml  robotwin_noise_idm_3cam_384_1e-4.yaml  robotwin_omnigen2_cache_idm.yaml  robotwin_omnigen2_clean_imagewam.yaml  robotwin_omnigen2_imagewam.yaml  robotwin_omnigen2_noise_idm.yaml  robotwin_ovis_u1_imagewam.yaml  robotwin_uncond_3cam_384_1e-4.yaml
docs/: dependencies.md  imagewam_graphic_models_zh.md  lerobot_v2_v3_nonidle_zh.md  network_structure_zh.md
experiments/libero/: eval_libero_omnigen2.sh  eval_libero_single.py  (+3 more)
scripts/: __init__.py  common.sh  train.py  train_zero1.sh  train_zero2.sh
tests/: test_lerobot_v3_strict_nonidle.py
(+75 files in other folders)
